fix the issue of child component getting hideen behind navbar (#69)
* fix the issue of child component getting hideen behind navbar

* made position sticky for navbar

--- a/src/components/Layout/Navbar/navbar.module.css
+++ b/src/components/Layout/Navbar/navbar.module.css
@@ -1,5 +1,6 @@
 .navbar {
-    position:fixed;
+    position: sticky;
+    top: 0;
     width:100%;
     z-index:1;
 }
